added divs for the morning and evening recommendation including images and styles

--- a/html/recommendations.html
+++ b/html/recommendations.html
@@ -6,5 +6,46 @@
         <div class="center">Moments</div>
     </ons-toolbar>
     
+    <div style="display: flex; justify-content: center;">
+        <div style="width: 90%;">
+            <ons-row>
+                <ons-col>
+                    <div style="text-align: center; padding: 15px;">
+                        <ons-button modifier="small"
+                                    style="background-color: white; border-radius: 15px;">
+                            <span style="color: black; padding-right: 10px; padding-left: 10px;"><b>Morning</b></span>
+                        </ons-button>
+                    </div>
+                </ons-col>
+            </ons-row>
+            <ons-row onclick="" style="background-color: white; border-radius: 15px">
+                <ons-col width="10%" style="display: flex; align-items: center">
+                    <ons-checkbox input-id="check-1" style="padding: 5px"></ons-checkbox>
+                </ons-col>
+                <ons-col width="90%">
+                    <img src="lib/graphics/meditation.svg">
+                </ons-col>
+            </ons-row>
+            <ons-row style="background-color: white; border-radius: 15px; margin-top: 6px">
+                <ons-col width="10%" style="display: flex; align-items: center">
+                    <ons-checkbox input-id="check-1" style="padding: 5px"></ons-checkbox>
+                </ons-col>
+                <ons-col width="90%">
+                    <img src="lib/graphics/workout.svg">
+                </ons-col>
+            </ons-row>
+            <ons-row>
+                <ons-col>
+                    <div style="text-align: center; padding: 15px;">
+                        <ons-button modifier="small"
+                                    style="background-color: white; border-radius: 15px;">
+                            <span style="color: black; padding-right: 10px; padding-left: 10px;"><b>Afternoon</b></span>
+                        </ons-button>
+                    </div>
+                </ons-col>
+            </ons-row>
+
+        </div>
+    </div>
 
 </ons-page>
