added divs for night recommendations with styles and images

--- a/html/recommendations.html
+++ b/html/recommendations.html
@@ -71,7 +71,24 @@
                     </div>
                 </ons-col>
             </ons-row>
-            
+
+            <ons-row style="background-color: white; border-radius: 15px">
+                <ons-col width="10%" style="display: flex; align-items: center">
+                    <ons-checkbox input-id="check-1" style="padding: 5px"></ons-checkbox>
+                </ons-col>
+                <ons-col width="90%">
+                    <img src="lib/graphics/outdoor.svg">
+                </ons-col>
+            </ons-row>
+            <ons-row style="background-color: white; border-radius: 15px; margin-top: 6px">
+                <ons-col width="10%" style="display: flex; align-items: center">
+                    <ons-checkbox input-id="check-1" style="padding: 5px"></ons-checkbox>
+                </ons-col>
+                <ons-col width="90%">
+                    <img src="lib/graphics/sleep.svg">
+                </ons-col>
+            </ons-row>
+
         </div>
     </div>
 
